Ajust gitingore arquivo vscode workspace

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
+### VSCODE ###
+conversor-horas-trabalho.code-workspace
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
