--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+typer = "^0.12.5"
+rich = "^13.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
