--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,4 +20,9 @@ jobs:
               run: poetry install --without doc
 
             - name: Rodar os testes
-              run: poetry run task test
+              run: poetry run task test --cov-report=xml
+
+            - name: Subir cobertura para o codecov
+              uses: codecov/codecov-action@v3
+              with:
+                token: ${{ secrets.CODECOV_TOKEN }}
