--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,12 @@ blue = "^0.9.1"
 isort = "^5.13.2"
 taskipy = "^1.13.0"
 
-
 [tool.poetry.group.doc.dependencies]
 mkdocs-material = "^9.5.40"
 mkdocstrings = "^0.26.2"
 mkdocstrings-python = "^1.12.0"
+jinja2 = "^3.1.4"
+mkdocs-macros-plugin = "^1.3.6"
 
 [build-system]
 requires = ["poetry-core"]
