--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,4 +14,4 @@ build:
       - poetry config virtualenvs.create false
 
     post_install:
-      - poetry install --only doc
+      - . "$READTHEDOCS_VIRTUALENV_PATH/bin/activate" && poetry install --only doc
